[package]
name = "mio-udev"
version = "0.2.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0/MIT"
description = "MIO support for udev device events."
repository = "https://github.com/jeandudey/tokio-udev"
homepage = "https://github.com/jeandudey/tokio-udev"
documentation = "https://docs.rs/mio-udev"
edition = "2018"

[dependencies]
udev = "0.2"
mio = "0.6"
libc = "0.2"
