# SPDX-FileCopyrightText: © 2020 Jean-Pierre De Jesus DIAZ <me@jeandudey.tech>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mio-udev"
version = "0.5.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0 OR MIT"
description = """
Non-blocking/Asynchronous Mio support for udev device events.
"""
repository = "https://github.com/jeandudey/tokio-udev"
homepage = "https://github.com/jeandudey/tokio-udev"
documentation = "https://docs.rs/mio-udev"
edition = "2018"

[dependencies]
udev = "0.5"
mio = { version = "0.7", features = ["os-util"] }
libc = "0.2"
