[package]
name = "tokio-udev"
version = "0.3.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0/MIT"
description = """
Non-blocking/Asynchronous Tokio support for udev device events.
"""
repository = "https://github.com/jeandudey/tokio-udev"
homepage = "https://github.com/jeandudey/tokio-udev"
documentation = "https://docs.rs/tokio-udev"
edition = "2018"

[dependencies]
mio = { version = "0.7", features = ["os-poll"] }
mio-udev = { path = "../mio-udev", version = "0.3.0" }

futures-core = "0.3"
tokio = { version = "0.2", features = ["io-driver"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros"] }
