[package]
name = "tokio-udev"
version = "0.7.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0/MIT"
description = """
Non-blocking/Asynchronous Tokio support for udev device events.
"""
repository = "https://github.com/jeandudey/tokio-udev"
homepage = "https://github.com/jeandudey/tokio-udev"
documentation = "https://docs.rs/tokio-udev"
edition = "2018"

[dependencies]
futures-core = "0.3"
tokio = { version = "1", features = ["net"] }
udev = { version = "0.7" }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
hwdb = ["udev/hwdb"]
